Created the tab where the system administrator can modify the permissions of the registered users has been created.

--- a/HHRROrganizer/Views/Home/Privacy.cshtml
+++ b/HHRROrganizer/Views/Home/Privacy.cshtml
@@ -3,4 +3,6 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, incidunt harum! Odio corporis vitae dolore fugiat consequatur in iure molestiae similique! Veniam fugit fuga exercitationem corporis impedit? Tempore, nam? Dicta. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate veniam, itaque non quam sunt nemo ullam laudantium reprehenderit. Fuga, odio. Et sunt autem ipsa, animi quasi modi fuga cupiditate dicta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem sunt ad modi odit dolor incidunt facere eum, ipsum possimus. Dolore voluptate consectetur quas deserunt in molestias natus vitae laborum adipisci!
+</p>
