--- a/HHRROrganizer/Views/Employees/Index.cshtml
+++ b/HHRROrganizer/Views/Employees/Index.cshtml
@@ -46,7 +46,7 @@
         {
             <tr class="employeeInfoRow">
                 <td>
-                    <img src="@item.Picture" alt="" class="employeePicture" />
+                    <img src="~/pictures/@item.Picture" alt="" class="employeePicture" />
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Name)
