--- a/HHRROrganizer/Views/Home/Privacy.cshtml
+++ b/HHRROrganizer/Views/Home/Privacy.cshtml
@@ -1,8 +1,15 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "User Manual";
 }
-<h1>@ViewData["Title"]</h1>
+<h1>Manual de usuario</h1>
 
 <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, incidunt harum! Odio corporis vitae dolore fugiat consequatur in iure molestiae similique! Veniam fugit fuga exercitationem corporis impedit? Tempore, nam? Dicta. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate veniam, itaque non quam sunt nemo ullam laudantium reprehenderit. Fuga, odio. Et sunt autem ipsa, animi quasi modi fuga cupiditate dicta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem sunt ad modi odit dolor incidunt facere eum, ipsum possimus. Dolore voluptate consectetur quas deserunt in molestias natus vitae laborum adipisci!
 </p>
+
+<ul>
+    <li><b>Rol Admin:</b> Tiene permisos de crear empleados, eliminarlos, aumentar salario y disminuirlo. Ademas, tiene una seccion disponible para administrar roles de usuarios registrados, asi como eliminarlos. Puede visualizar toda seccion de la aplicacion.</li>
+    <li><b>Rol Manager:</b> Tiene permisos para ver los diferentes departamentos, pero no puede crear nuevos. Puede editar empleados, eliminarlos y crearlos desde cero. Pero no puede ni aumentar o disminuir su sueldo. Tampoco tiene disponible la opcion de modificar permisos de usuario</li>
+    <li><b>Rol Guest:</b> Tiene permisos para ver el listado de empleados, asi como de departamentos.</li>
+
+</ul>
