--- a/HHRROrganizer/Views/Shared/_Layout.cshtml
+++ b/HHRROrganizer/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - HHRROrganizer - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - HHRROrganizer - <a asp-area="" asp-controller="Home" asp-action="Privacy">Manual de usuario</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
