Assignment of functionalities for each role

--- a/HHRROrganizer/Views/Home/ModifyPermissions.cshtml
+++ b/HHRROrganizer/Views/Home/ModifyPermissions.cshtml
@@ -24,7 +24,7 @@
             @Html.DisplayNameFor(model => model.Id)
         </th>*@
             <th>
-                Email
+                User Email
             </th>
             <th>
                 Organization Number
