--- a/HHRROrganizer/wwwroot/css/styles.css
+++ b/HHRROrganizer/wwwroot/css/styles.css
@@ -11,3 +11,10 @@
 .employeeInfoRow td{
     vertical-align: middle;
 }
+
+form{
+    /*display: flex;
+    flex-direction:column;
+    justify-content:center;*/
+   
+}
