--- a/HHRROrganizer/Views/Departments/Index.cshtml
+++ b/HHRROrganizer/Views/Departments/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Index</h1>
 
-@if (User.IsInRole("admin") || User.IsInRole("manager"))
+@if (User.IsInRole("admin"))
 {
     <p>
         <a asp-action="Create">Create New</a>
@@ -21,6 +21,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
+            @if (User.IsInRole("admin")|| User.IsInRole("manager"))
+            {
+                <th>
+                    Manage Department
+                </th>
+            }
             <th></th>
         </tr>
     </thead>
@@ -34,11 +40,21 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
+                @if (User.IsInRole("admin"))
+                {
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                }
+                else if (User.IsInRole("manager"))
+                {
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    </td>
+                }
             </tr>
         }
     </tbody>
