--- a/HHRROrganizer/Views/Employees/Create.cshtml
+++ b/HHRROrganizer/Views/Employees/Create.cshtml
@@ -4,6 +4,17 @@
     ViewData["Title"] = "Create";
 }
 
+@{string msg = Convert.ToString(TempData["msg"]);
+    if (!String.IsNullOrEmpty(msg))
+    {
+        var statusMessageClass = msg.StartsWith("Error") ? "danger" : "success";
+        <div class="alert alert-@statusMessageClass alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            @msg
+        </div>
+    }
+}
+
 <h1>Create</h1>
 
 <h4>Employees</h4>
@@ -14,7 +25,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Picture">Upload a profile picture</label>
-                <input type="file" class="form-control-file" name="postedFiles">
+                <input type="file" accept="image/* " class="form-control-file" name="postedFiles">
                 <span asp-validation-for="Picture" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -29,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
-                <input asp-for="StartDate" class="form-control" />
+                <input asp-for="StartDate" class="form-control"/>
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -44,7 +55,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DepartmentId" class="control-label">Department</label>
-                <select asp-for="DepartmentId" class ="form-control" asp-items="ViewBag.DepartmentId"></select>
+                <select asp-for="DepartmentId" class="form-control" asp-items="ViewBag.DepartmentId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
