--- a/HHRROrganizer/Views/Employees/Edit.cshtml
+++ b/HHRROrganizer/Views/Employees/Edit.cshtml
@@ -10,9 +10,16 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <div class="form-group">
+                <label asp-for="Picture">Change the profile picture:</label>
+                <input asp-for="Picture" type="file" accept="image/*" class="form-control-file" name="postedFiles">
+                <input type="hidden" asp-for="Picture" />
+                @*<img src="~/pictures/@Model.Picture" alt="" class="employeePicture" />*@
+                <span asp-validation-for="Picture" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -22,11 +29,6 @@
                 <label asp-for="Surname" class="control-label"></label>
                 <input asp-for="Surname" class="form-control" />
                 <span asp-validation-for="Surname" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Picture" class="control-label"></label>
-                <input asp-for="Picture" class="form-control" />
-                <span asp-validation-for="Picture" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
