--- a/HHRROrganizer/wwwroot/css/styles.css
+++ b/HHRROrganizer/wwwroot/css/styles.css
@@ -16,5 +16,76 @@ form{
     /*display: flex;
     flex-direction:column;
     justify-content:center;*/
-   
+}
+
+.minExplanation {
+    font-size: 10px;
+    font-weight: bold;
+}
+
+.forms{
+    display:flex;
+    justify-content:space-between;
+}
+
+/*The next code is reffered to the span that modifies the price of NetSalary and GrossSalary of employees, even with different keyframes for many browsers compatibility*/
+.TextFadeEffect {
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(55, 59, 62);
+    animation: fadeIn linear 4s;
+    -webkit-animation: fadeIn linear 4s;
+    -moz-animation: fadeIn linear 4s;
+    -o-animation: fadeIn linear 4s;
+    -ms-animation: fadeIn linear 4s;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+    from {
+        color: black;
+    }
+    to {
+        color: lightgreen;
+    }
+}
+
+@-moz-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-o-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-ms-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
