--- a/HHRROrganizer/wwwroot/css/styles.css
+++ b/HHRROrganizer/wwwroot/css/styles.css
@@ -12,11 +12,6 @@
     vertical-align: middle;
 }
 
-form{
-    /*display: flex;
-    flex-direction:column;
-    justify-content:center;*/
-}
 
 .minExplanation {
     font-size: 10px;
@@ -28,6 +23,12 @@ form{
     justify-content:space-between;
 }
 
+.createEmployeeHeader{
+    display:flex;
+    justify-content: space-between;
+}
+
+
 /*The next code is reffered to the span that modifies the price of NetSalary and GrossSalary of employees, even with different keyframes for many browsers compatibility*/
 .TextFadeEffect {
     font-family: Arial, Helvetica, sans-serif;
@@ -36,7 +37,6 @@ form{
     -webkit-animation: fadeIn linear 4s;
     -moz-animation: fadeIn linear 4s;
     -o-animation: fadeIn linear 4s;
-    -ms-animation: fadeIn linear 4s;
 }
 
 @keyframes fadeIn {
@@ -73,15 +73,6 @@ form{
 }
 
 @-o-keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@-ms-keyframes fadeIn {
     0% {
         opacity: 0;
     }
