Added contextual help effects on some buttons using the popper library, to help the user to understand the functionalities of each button.

--- a/HHRROrganizer/Views/Departments/Index.cshtml
+++ b/HHRROrganizer/Views/Departments/Index.cshtml
@@ -9,7 +9,7 @@
 @if (User.IsInRole("admin"))
 {
     <p>
-        <a asp-action="Create">Create New</a>
+        <a asp-action="Create">Create New Department</a>
     </p>
 }
 <table class="table">
