Modified some visual changes, both in cshtml and css, mainly in Home and User Manual.

--- a/HHRROrganizer/Views/Employees/Create.cshtml
+++ b/HHRROrganizer/Views/Employees/Create.cshtml
@@ -18,7 +18,10 @@
 <h1>Create</h1>
 <div class="createEmployeeHeader">
     <h4>Employees</h4>
-    <input type="button" id="randomGeneratorInput" class="btn btn-secondary" value="Fill with random user" data-toggle="tooltip" data-placement="bottom" title="This button fills fields randomly with 'RandomUserAPI', to create random employees faster and explore how this demo works. But you can create your employee manually.">
+    <div>
+        <input type="button" id="randomGeneratorInput" class="btn btn-secondary" value="Fill with random user" data-toggle="tooltip" data-placement="bottom" title="This button fills fields randomly with 'RandomUserAPI', to create random employees faster and explore how this demo works. But you can create your employee manually. (Just for Demo)">
+    </div>
+    
 </div>
 
 
