--- a/HHRROrganizer/wwwroot/css/site.css
+++ b/HHRROrganizer/wwwroot/css/site.css
@@ -7,6 +7,7 @@ a.navbar-brand {
   word-break: break-all;
 }
 
+
 /* Provide sufficient contrast against white background */
 a {
   color: #0366d6;
@@ -19,9 +20,9 @@ a {
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 /* Sticky footer styles
@@ -54,13 +55,14 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+/*ESTE ES EL BODY QUE TENGO QUE MODIFICAR PARA CAMBIAR EL FONDO*/
 }
 .footer {
   position: absolute;
