--- a/HHRROrganizer/Areas/Identity/Pages/Account/Register.cshtml
+++ b/HHRROrganizer/Areas/Identity/Pages/Account/Register.cshtml
@@ -47,6 +47,9 @@
                             There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
                             for details on setting up this ASP.NET application to support logging in via external services.
                         </p>
+                        <br />
+                        <br />
+                        <p class="demoExplanation">**As this is a Demo, by default, we will register you as an administrator so you can see all the features of the application. Feel free to register with other users, and in the 'Modify permissions' section, change their roles to manager or guest, so you can see how their functionality is limited.**</p>
                     </div>
                 }
                 else
