--- a/HHRROrganizer/wwwroot/css/styles.css
+++ b/HHRROrganizer/wwwroot/css/styles.css
@@ -1,6 +1,45 @@
-﻿body {
+﻿@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
+body {
+    font-family: 'Varela Round', sans-serif;
 }
+
+.gifLogo {
+    width: 60px;
+    height: auto;
+    margin-right: 20px;
+}
+
+.userManualSection{
+    display:flex;
+}
+.userManualPic {
+    width: 50%;
+    object-fit: cover;
+    margin-right:20px;
+    padding-left:10px;
+}
+
+.yellowSeparator {
+    border: 5px solid #ffd65b;
+    border-radius: 5px;
+}
+
+.logoTitle {
+    font-family: 'Lobster', cursive;
+    /*-webkit-text-stroke: .2px #ffd65b;
+    font-family: sans-serif;
+    color: #ffd65b;
+    color: black;
+    font-family: papyrus;
+    text-shadow: 2px 0 0 #ffd65b, -2px 0 0 #ffd65b, 0 2px 0 #ffd65b, 0 -2px 0 #ffd65b, 1px 1px #ffd65b, -1px -1px 0 #ffd65b, 1px -1px 0 #ffd65b, -1px 1px 0 #ffd65b;*/
+}
+
+.organiteamHomePic{
+    width:48%;
+}
+
 
 .employeePicture {
     width: 100px;
@@ -28,6 +67,10 @@
     justify-content: space-between;
 }
 
+.demoExplanation{
+    font-style:italic;
+    font-weight: bold;
+}
 
 /*The next code is reffered to the span that modifies the price of NetSalary and GrossSalary of employees, even with different keyframes for many browsers compatibility*/
 .TextFadeEffect {
