Small translation to english in footer.

--- a/HHRROrganizer/Views/Shared/_Layout.cshtml
+++ b/HHRROrganizer/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - OrganiTeam - <a asp-area="" asp-controller="Home" asp-action="Privacy">Manual de usuario</a>
+            &copy; 2021 - OrganiTeam - <a asp-area="" asp-controller="Home" asp-action="Privacy">User Manual</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
