Small visual details.

--- a/HHRROrganizer/Views/Home/Privacy.cshtml
+++ b/HHRROrganizer/Views/Home/Privacy.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "User Manual";
 }
-<h1>Manual de usuario</h1>
+<h1>User Manual</h1>
 <div class="userManualSection">
     <img class="userManualPic" src="~/pictures/userManualPic.png" />
     <div>
